<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homePage">

    <Button
        android:id="@+id/homepage_to_wkoutbuddynearme"
        android:layout_width="216dp"
        android:layout_height="54dp"
        android:layout_marginBottom="16dp"
        android:onClick="toWorkoutBuddiesNearMe"
        android:text="Close Workout Buddies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment"
        app:layout_constraintVertical_bias="0.865"
        tools:text="@string/homepage_to_wkoutbuddynearme" />

    <Button
        android:id="@+id/homepage_to_settings"
        android:layout_width="94dp"
        android:layout_height="54dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="10dp"
        android:onClick="toSettings"
        android:text="Settings"
        app:layout_constraintBottom_toTopOf="@+id/fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/homepage_to_settings" />


    <Button
        android:id="@+id/homepage_to_gymnearme"
        android:layout_width="159dp"
        android:layout_height="54dp"
        android:layout_marginBottom="80dp"
        android:onClick="toGymsNearMe"
        android:text="Close Gyms"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment"
        tools:text="@string/homepage_to_gymnearme" />

</android.support.constraint.ConstraintLayout>