<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tarleton.hackuta.workoutbuddy.StatTrackerActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="82dp"
        android:text="Creating a Profile"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/profile_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14"
        tools:text="@string/onetime_title" />

    <Button
        android:id="@+id/button_createprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="102dp"
        android:onClick="createProfile"
        android:text="Create Profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_sex"
        tools:text="@string/button_createProfile" />

    <EditText
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:ems="10"
        android:hint="@string/account_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/profile_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="@string/account_name" />

    <EditText
        android:id="@+id/profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:hint="@string/account_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/spinner_sex"
        app:layout_constraintStart_toStartOf="@+id/profile_name"
        app:layout_constraintTop_toBottomOf="@+id/profile_name"
        tools:text="@string/account_email" />

    <Spinner
        android:id="@+id/spinner_sex"
        android:layout_width="142dp"
        android:layout_height="0dp"
        android:layout_marginBottom="49dp"
        android:entries="@array/sex_array"
        android:popupBackground="@color/accent_material_dark_1"
        app:layout_constraintBottom_toTopOf="@+id/button_createprofile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_email" />

</android.support.constraint.ConstraintLayout>
